# stemgen

./: Cargo.toml
.github/workflows/: build.yml
cli/: Cargo.toml
src/: demucs.rs
