[package]
name = "stemgen"
version = "0.5.0"
edition = "2024"

[workspace]
members = ["cli"]

[lib]
name = "stemgen"
path = "src/lib.rs"

[dependencies]
ffmpeg-next = { version = "8.1.0", default-features = false, features = [
  "codec",
  "format",
  "software-resampling"
] }
itertools = "0.13.0"
ndarray = { version = "0.17.2" }
ort = { version = "=2.0.0-rc.12", default-features = false, features = [
  "copy-dylibs",
  "download-binaries",
  "fetch-models",
  "migraphx",
  "ndarray",
  "pkg-config",
  "std",
  "tls-native"
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
taglib = { git = "https://github.com/acolombier/taglib-rust.git", tag = "v2.1.1", features = [
  "ni-stem",
  "use-pkgconfig"
] }

[dependencies.chrono]
version = "0.4.41"
optional = true

[features]
default = []
cuda = ["ort/cuda"]
migraphx = ["ort/migraphx"]

benchmark = ["chrono"]
