[package]
name = "stemgen-cli"
version = "0.5.0"
edition = "2024"

[[bin]]
doc = false
name = "stemgen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.46", features = ["cargo", "derive"] }
ffmpeg-next = { version = "8.1.0", default-features = false, features = [
  "codec",
  "format",
  "software-resampling"
] }
glob = "0.3.3"
indicatif = "0.18.0"

[dependencies.stemgen]
path = ".."

[features]
default = []
cuda = ["stemgen/cuda"]
migraphx = ["stemgen/migraphx"]
